<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/design_default_color_background"
    android:background="@color/design_default_color_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:background="#1E3A5F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backBtn"
                style=""
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/df_red"
                android:text="@string/back" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_coin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/doneBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/default_green"
                android:text="@string/done" />
        </LinearLayout>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="384dp"
        android:layout_height="235dp"
        android:foregroundGravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <CheckBox
            android:id="@+id/comSwitch"
            android:layout_width="173dp"
            android:layout_height="48dp"
            android:text="@string/commemorative"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coinPic"
            android:textColor="@color/black"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <EditText
            android:id="@+id/newCoinName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="78dp"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/new_coin_s_name_here"
            android:textColorHint="#7F000000"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/coinPic"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/coinPic"
            android:layout_width="128dp"
            android:layout_height="174dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:clickable="true"
            android:contentDescription="@string/image_here"
            android:tag="camera_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/camera_drawable" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/addInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/additional_info"
        android:textColorHint="#7F000000"
        android:textColor="@color/black"
        android:inputType="text"
        android:minLines="5"
        android:outlineProvider="bounds"
        android:singleLine="false"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>